<resources>
    <string name="app_name">习惯铸造者</string>
    <string name="main_habit">打卡</string>
    <string name="main_mine">我的</string>
    <string name="main_setting">设置</string>

    <string name="Monday">周一</string>
    <string name="Tuesday">周二</string>
    <string name="Wednesday">周三</string>
    <string name="Thursday">周四</string>
    <string name="Friday">周五</string>
    <string name="Saturday">周六</string>
    <string name="Sunday">周日</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
