<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">
    <View android:layout_width="fill_parent" android:layout_height="0.5dp"
          android:background="@color/main_line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_bg"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/bookshelf"
            style="@style/MainMenuItemStyle"
            android:drawableTop="@drawable/icon_bookshelf_selected"
            android:text="@string/main_habit"/>

        <TextView
            android:id="@+id/select"
            style="@style/MainMenuItemStyle"
            android:drawableTop="@drawable/icon_bookshelf_selected"
            android:text="@string/main_mine"/>

        <TextView
            android:id="@+id/setting"
            style="@style/MainMenuItemStyle"
            android:drawableTop="@drawable/icon_bookshelf_selected"
            android:text="@string/main_setting"/>
    </LinearLayout>

</LinearLayout>