<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/green"
              android:orientation="horizontal">
    <LinearLayout android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
                  android:orientation="vertical">
        <TextView android:id="@+id/monday"
                  android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:layout_weight="2"
                  android:gravity="center"
                  android:text="@string/Monday"/>
        <TextView android:id="@+id/monday_txview"
                  android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:layout_weight="1"
                  android:gravity="center"
                  android:text="@string/main_mine"/>
    </LinearLayout>

    <LinearLayout android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
                  android:orientation="vertical">
        <TextView android:id="@+id/tuesday"
                  android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:layout_weight="2"
                  android:gravity="center"
                  android:text="@string/Tuesday"/>
        <TextView android:id="@+id/tuesday_txview"
                  android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:layout_weight="1"
                  android:gravity="center"
                  android:text="@string/main_mine"/>
    </LinearLayout>
    <LinearLayout android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
                  android:orientation="vertical">
        <TextView android:id="@+id/wednesday"
                  android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:layout_weight="2"
                  android:gravity="center"
                  android:text="@string/Wednesday"/>
        <TextView android:id="@+id/wednesday_txview"
                  android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:layout_weight="1"
                  android:gravity="center"
                  android:text="@string/main_mine"/>
    </LinearLayout>
    <LinearLayout android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
                  android:orientation="vertical">
        <TextView android:id="@+id/thursday"
                  android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:layout_weight="2"
                  android:gravity="center"
                  android:text="@string/Thursday"/>
        <TextView android:id="@+id/thursday_txview"
                  android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:layout_weight="1"
                  android:gravity="center"
                  android:text="@string/main_mine"/>
    </LinearLayout>
    <LinearLayout android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
                  android:orientation="vertical">
        <TextView android:id="@+id/friday"
                  android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:layout_weight="2"
                  android:gravity="center"
                  android:text="@string/Friday"/>
        <TextView android:id="@+id/friday_txview"
                  android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:layout_weight="1"
                  android:gravity="center"
                  android:text="@string/main_mine"/>
    </LinearLayout>
    <LinearLayout android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
                  android:orientation="vertical">
        <TextView android:id="@+id/staursday"
                  android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:layout_weight="2"
                  android:gravity="center"
                  android:text="@string/Saturday"/>
        <TextView android:id="@+id/staursday_txview"
                  android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:layout_weight="1"
                  android:gravity="center"
                  android:text="@string/main_mine"/>
    </LinearLayout>
    <LinearLayout android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
                  android:orientation="vertical">
        <TextView android:id="@+id/sunday"
                  android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:layout_weight="2"
                  android:gravity="center"
                  android:text="@string/Sunday"/>
        <TextView android:id="@+id/sunday_txview"
                  android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:layout_weight="1"
                  android:gravity="center"
                  android:text="@string/main_mine"/>
    </LinearLayout>
</LinearLayout>